--- a/ckanext/tour/templates/base.html
+++ b/ckanext/tour/templates/base.html
@@ -1,7 +1,7 @@
 {% ckan_extends %}
 
 {% block head_extras %}
-    <span class="hidden" data-module="init-tour"></span>
+    <span class="hidden" data-module="tour-init"></span>
 {% endblock %}
 
 {% block scripts %}
