--- a/ckanext/tour/templates/tour/tour_step.html
+++ b/ckanext/tour/templates/tour/tour_step.html
@@ -17,5 +17,5 @@
 
     {{ form.select('step_position', label=_('Position'), options=h.tour_get_position_options(), selected=step.step_position, error=error or {}) }}
 
-    {{ image_upload(step or {}, errors or {}, is_upload_enabled=true, upload_label = _('Step image'), url_label=_('Step image')) }}
+    {{ form.input('step_upload', label=_('Step image'), type='file', placeholder='', value='', error='', classes=['control-full']) }}
 </fieldset>
