--- a/ckanext/tour/templates/tour/tour_step.html
+++ b/ckanext/tour/templates/tour/tour_step.html
@@ -1,21 +1,20 @@
 {% import 'macros/form.html' as form %}
 {% from "tour/tour_image_upload.html" import image_upload %}
 
-{{ step }}
 <fieldset class="tour-step" id="step_{{ step_id }}" data-step-id="{{ step_id }}">
     <button class="remove-step btn">X</button>
 
-    {{ form.input("step_title", label=_("Tour title"), value=step.step_title) }}
+    {{ form.input("step_title", label=_("Tour title"), value=step.step_title or step.title) }}
 
-    {% call form.input("step_element", label=_("HTML element query"), value=step.step_element, attrs={'required': 1, 'class': 'form-control'}) %}
+    {% call form.input("step_element", label=_("HTML element query"), value=step.step_element or step.element, attrs={'required': 1, 'class': 'form-control'}) %}
         {{ form.info(_('Example: .dataset-list or #map')) }}
     {% endcall %}
 
-    {% call form.input("step_intro", label=_("Intro"), value=step.step_intro) %}
+    {% call form.input("step_intro", label=_("Intro"), value=step.step_intro or step.intro) %}
         {{ form.info(_('Supports HTML')) }}
     {% endcall %}
 
-    {{ form.select('step_position', label=_('Position'), options=h.tour_get_position_options(), selected=step.step_position, error=error or {}) }}
+    {{ form.select('step_position', label=_('Position'), options=h.tour_get_position_options(), selected=step.step_position or step.position, error=error or {}) }}
 
     {{ form.input('step_upload', label=_('Step image'), type='file', placeholder='', value='', error='', classes=['control-full']) }}
 </fieldset>
