update: refactor templates

--- a/ckanext/tour/templates/tour/base.html
+++ b/ckanext/tour/templates/tour/base.html
@@ -1,4 +1,4 @@
-{% ckan_extends %}
+{% extends 'admin_panel/base.html' %}
 
 {% block head_extras %}
     <span class="hidden" data-module="tour-init"></span>
