--- a/ckanext/tour/templates/tour/snippets/tour_step.html
+++ b/ckanext/tour/templates/tour/snippets/tour_step.html
@@ -1,5 +1,5 @@
 {% import 'macros/form.html' as form %}
-{% from "tour/tour_image_upload.html" import image_upload %}
+{% from "tour/snippets/tour_image_upload.html" import image_upload %}
 
 <fieldset class="tour-step" id="step_{{ step_id }}" data-step-id="{{ step_id }}">
     <button class="remove-step btn">X</button>
