--- a/ckanext/tour/templates/tour/tour_edit.html
+++ b/ckanext/tour/templates/tour/tour_edit.html
@@ -1,4 +1,4 @@
-{% extends 'admin_panel/base.html' %}
+{% extends 'tour/base.html' %}
 
 {% import 'macros/form.html' as form %}
 
@@ -28,7 +28,7 @@
 
             <div class="tour-steps__steps">
                 {% for step in tour.steps %}
-                    {% snippet 'tour/tour_step.html', step=step %}
+                    {% snippet 'tour/snippets/tour_step.html', step=step %}
                 {% endfor %}
             </div>
 
