--- a/ckanext/tour/templates/tour/tour_add.html
+++ b/ckanext/tour/templates/tour/tour_add.html
@@ -6,7 +6,7 @@
     <li>{% link_for _("Tour add"), named_route='tour.add' %}</li>
 {% endblock breadcrumb_content %}
 
-{% block ap_content %}
+{% block ap_primary %}
     <form action="{{ h.url_for("tour.add") }}" method="POST" enctype="multipart/form-data">
         {% call form.input("title", label=_("Tour title"), value=data.title, attrs={'required': 1, 'class': 'form-control'}) %}
             {{ form.info(_("A tour title to explain what is it for")) }}
@@ -53,7 +53,7 @@
             <button class="btn btn-primary" type="submit">{{ _("Create tour") }}</button>
         </div>
     </form>
-{% endblock ap_content %}
+{% endblock ap_primary %}
 
 {% block scripts %}
     {{ super() }}
