--- a/ckanext/tour/templates/tour/tour_list.html
+++ b/ckanext/tour/templates/tour/tour_list.html
@@ -7,7 +7,7 @@
     <li>{% link_for _("Tour list"), named_route='tour.list' %}</li>
 {% endblock breadcrumb_content %}
 
-{% block ap_content %}
+{% block ap_primary %}
     <h1>{{ _("Tour list") }}</h1>
 
     <div class="row g-3">
@@ -52,4 +52,4 @@
             </table>
         </form>
     </div> <!-- row -->
-{% endblock ap_content %}
+{% endblock ap_primary %}
