Revert "update: update templates to follow new block name"
This reverts commit 20ade0b67c2efd4d8b188a3b4ec0f4785b7dc660.

--- a/ckanext/tour/templates/tour/tour_list.html
+++ b/ckanext/tour/templates/tour/tour_list.html
@@ -7,7 +7,7 @@
     <li>{% link_for _("Tour list"), named_route='tour.list' %}</li>
 {% endblock breadcrumb_content %}
 
-{% block ap_primary %}
+{% block ap_content %}
     <h1>{{ _("Tour list") }}</h1>
 
     <div class="row g-3">
@@ -52,4 +52,4 @@
             </table>
         </form>
     </div> <!-- row -->
-{% endblock ap_primary %}
+{% endblock ap_content %}
