--- a/ckanext/tour/templates/tour/tour_404.html
+++ b/ckanext/tour/templates/tour/tour_404.html
@@ -6,9 +6,9 @@
     <li>{% link_for _("Tour 404"), named_route='tour.list' %}</li>
 {% endblock breadcrumb_content %}
 
-{% block ap_primary %}
+{% block ap_content %}
     <p style="font-size: 70px">TOUR NOT FOUND - 404</p>
-{% endblock ap_primary %}
+{% endblock ap_content %}
 
 {% block scripts %}
     {{ super() }}
