--- a/ckanext/tour/templates/tour/tour_add.html
+++ b/ckanext/tour/templates/tour/tour_add.html
@@ -3,7 +3,7 @@
 {% import 'macros/form.html' as form %}
 
 {% block breadcrumb_content %}
-    <li>{% link_for _("Tour add"), named_route='tour.add' %}</li>
+    <li class="active">{% link_for _("Tour add"), named_route='tour.add' %}</li>
 {% endblock breadcrumb_content %}
 
 {% block ap_content %}
