--- a/ckanext/tour/templates/tour/tour_list.html
+++ b/ckanext/tour/templates/tour/tour_list.html
@@ -4,52 +4,36 @@
 {% import 'macros/form.html' as form %}
 
 {% block breadcrumb_content %}
-    <li>{% link_for _("Tour list"), named_route='tour.list' %}</li>
+    <li class="active">{% link_for _("Tour list"), named_route='tour.list' %}</li>
 {% endblock breadcrumb_content %}
 
 {% block ap_content %}
     <h1>{{ _("Tour list") }}</h1>
 
     <div class="row g-3">
-        <form action="{{ h.url_for("tour.list") }}" method="POST">
-            <div class="bulk-actions">
-                {{ form.select('bulk-action', id='bulk-action', label=_('Action'), options=bulk_options, selected="", error=error) }}
+        <form action="{{ h.url_for('tour.list') }}" method="POST">
+            {{ h.csrf_input() }}
 
-                <input type="submit" id="apply-bulk" name="apply-bulk" value="Apply to selected items" class="btn btn-primary mb-3">
-            </div>
+            {% if page.items %}
+                <div class="bulk-actions">
+                    {{ form.select('bulk-action', id='bulk-action', label=_('Action'), options=bulk_options, selected="", error=error) }}
 
-            <table class="table table-primary table-sm">
-                <tr>
-                    <th>{{ form.checkbox() }}</th>
-                    <th>{{ _("Title") }}</th>
-                    <th>{{ _("Anchor") }}</th>
-                    <th>{{ _("Page") }}</th>
-                    <th>{{ _("State") }}</th>
-                    <th>{{ _("Steps") }}</th>
-                    <th>{{ _("Actions") }}</th>
-                </tr>
+                    <button type="submit" id="bulk-submit" class="btn btn-primary mb-3">
+                        {{ _("Apply to selected items") }}
+                    </button>
+                </div>
 
-                {% for tour in page.items %}
-                    <tr>
-                        <td>
-                            {{ form.checkbox() }}
-                        </td>
-                        <td>{{ tour.title }}</td>
-                        <td>{{ tour.anchor }}</td>
-                        <td>{{ tour.page }}</td>
-                        <td>{{ tour.state | title }}</td>
-                        <td>{{ tour.steps | length }}</td>
-                        <td>
-                            <button class="btn btn-danger">
-                                {{ _("Delete") }}
-                            </button>
-                            <a class="btn btn-primary" href="{{ h.url_for('tour.edit', tour_id=tour.id)}}">
-                                {{ _("Edit") }}
-                            </a>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </table>
+                {% snippet "admin_panel/config/snippets/sortable_table.html", items=page.items, columns=columns, order_by=order_by, sort=sort, bulk_check=1 %}
+            {% else %}
+                <p>
+                    {{ _("No tours found.") }}
+                    <a href="{{ h.url_for('tour.list') }}">{{ _("Clear the search") }}</a>
+                </p>
+            {% endif %}
         </form>
     </div> <!-- row -->
 {% endblock ap_content %}
+
+{% block page_pagination %}
+    {{ page.pager() }}
+{% endblock %}
