--- a/ckanext/tour/templates/tour/tour_list.html
+++ b/ckanext/tour/templates/tour/tour_list.html
@@ -25,9 +25,10 @@
 
                 {% snippet "admin_panel/config/snippets/sortable_table.html", items=page.items, columns=columns, order_by=order_by, sort=sort, bulk_check=1 %}
             {% else %}
+                {% set add_tour_url = h.url_for('tour.add') %}
                 <p>
                 {%- trans -%}
-                    No tours found. Want to <a href="{{ h.url_for('tour.add') }}">create</a> one?
+                    No tours found. Want to <a href="{{ add_tour_url }}">create</a> one?
                 {%- endtrans -%}
                 </p>
             {% endif %}
