--- a/ckanext/tour/templates/tour/tour_list.html
+++ b/ckanext/tour/templates/tour/tour_list.html
@@ -1,4 +1,4 @@
-{% extends 'tour/base.html' %}
+{% extends 'admin_panel/base.html' %}
 
 {% import 'macros/autoform.html' as autoform %}
 {% import 'macros/form.html' as form %}
