refactor: fix tour-step init

--- a/ckanext/tour/templates/tour/tour_edit.html
+++ b/ckanext/tour/templates/tour/tour_edit.html
@@ -25,7 +25,7 @@
 
         <div
             class="tour-steps"
-            -module="tour-steps tour-htmx">
+            data-module="tour-steps tour-htmx">
 
             <div class="tour-steps__steps">
                 {% for step in tour.steps %}
