--- a/ckanext/tour/templates/tour/snippets/tour_image_upload.html
+++ b/ckanext/tour/templates/tour/snippets/tour_image_upload.html
@@ -2,17 +2,18 @@
 {% from 'macros/form/checkbox.html' import checkbox %}
 
 
-{% macro image_upload(data, errors={}, field_url='image_url', field_upload='image_upload', field_clear='clear_upload',
+{% macro image_upload(data, errors={}, field_url='step_url', field_upload='step_upload', field_clear='step_clear',
                     is_url=false, is_upload=false, placeholder=false,
-                    url_label='', upload_label='', field_name='image_url')  %}
+                    url_label='', upload_label='', field_name='step_url')  %}
     {% set placeholder = placeholder if placeholder else _('http://example.com/my-image.jpg') %}
     {% set url_label = url_label or _('Image URL')  %}
     {% set upload_label = upload_label or _('Image')  %}
     {% set previous_upload = data.previous_upload %}
-    {% set is_upload = data.image if data else false %}
+    {% set is_upload = data.image and data.image.file_id %}
+    {% set is_url = data.image and not is_upload %}
 
     <div class="image-upload"
-            data-module="image-upload"
+            data-module="tour-image-upload"
             data-module-is_url="{{ 'true' if is_url else 'false' }}"
             data-module-is_upload="{{ 'true' if is_upload else 'false' }}"
             data-module-field_url="{{ field_url }}"
