feature: implement basic dragging

--- a/ckanext/tour/assets/css/style.css
+++ b/ckanext/tour/assets/css/style.css
@@ -29,6 +29,9 @@
   margin-bottom: 0;
 }
 
+.accordion.tour-accordion {
+  width: 100%;
+}
 .accordion.tour-accordion .accordion-header {
   display: flex;
   align-items: center;
@@ -36,6 +39,15 @@
 }
 .accordion.tour-accordion .accordion-header .accordion-header--text {
   margin-right: auto;
+}
+.accordion.tour-accordion .accordion-header .dragger {
+  height: 38px;
+  width: 38px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  cursor: grab;
 }
 .accordion.tour-accordion .accordion-header .accordion-button {
   width: fit-content;
