--- a/ckanext/tour/templates/tour/snippets/tour_step.html
+++ b/ckanext/tour/templates/tour/snippets/tour_step.html
@@ -7,7 +7,7 @@
     <div class="accordion-item">
         <h3 class="accordion-header" id="headingOne">
             <div class="accordion-header--text">
-                Step <span class="step-idx">{{ step_id }}</span>
+               <span class="step-number">{{ step_index or 0 }}</span> {{ _("Step") }}
             </div>
             <span class="dragger">
                 {% snippet 'snippets/svg/drag.svg' %}
@@ -22,6 +22,8 @@
             <div class="accordion-body">
                 <fieldset class="tour-step" id="step_{{ step_id }}" data-step-id="{{ step_id }}">
                     {{ form.hidden("step_id", value=step.step_id or step.id) }}
+                    {{ form.hidden("step_index", value=step.step_index or step.index) }}
+
                     {{ form.input("step_title", label=_("Tour title"), value=step.step_title or step.title) }}
 
                     {% call form.input("step_element", label=_("HTML element query"), value=step.step_element or step.element, attrs={'required': 1, 'class': 'form-control'}) %}
