--- a/ckanext/tour/theme/elements.scss
+++ b/ckanext/tour/theme/elements.scss
@@ -8,11 +8,6 @@
         gap: 12px;
 
         .tour-step {
-            border: 1px solid $step-border-color;
-            border-radius: $step-border-radius;
-            padding: 8px;
-            margin-bottom: 8px;
-
             position: relative;
 
             .form-group {
@@ -41,6 +36,10 @@
 .accordion.tour-accordion {
     width: 100%;
 
+    &.draggable-source--is-dragging {
+        opacity: .5;
+    }
+
     .accordion-header {
         display: flex;
         align-items: center;
@@ -48,6 +47,13 @@
 
         .accordion-header--text {
             margin-right: auto;
+
+            .step-number {
+                border: 1px solid black;
+                color: black;
+                padding: 5px 11px;
+                border-radius: 50%;
+            }
         }
 
         .dragger {
