--- a/ckanext/tour/templates/tour/tour_edit.html
+++ b/ckanext/tour/templates/tour/tour_edit.html
@@ -23,6 +23,7 @@
 
         <div class="form-actions js-form-wrapper form-wrapper">
             <button class="btn btn-primary" type="submit">{{ _("Update tour") }}</button>
+            <button class="btn btn-black btn-collapse-steps">{{ _("Collapse all steps") }}</button>
         </div>
 
         <h3>{{ _("Tour steps:") }}</h3>
