--- a/ckanext/tour/theme/elements.scss
+++ b/ckanext/tour/theme/elements.scss
@@ -49,8 +49,8 @@
             margin-right: auto;
 
             .step-number {
-                border: 1px solid black;
-                color: black;
+                border: 1px solid $black;
+                color: $black;
                 padding: 5px 11px;
                 border-radius: 50%;
             }
@@ -73,6 +73,104 @@
 
         .remove-step {
             height: 38px;
+        }
+    }
+}
+
+
+// ShepherdJS
+.shepherd-modal-overlay-container.shepherd-modal-is-visible {
+    opacity: 0.7 !important;
+}
+
+.shepherd-element.tour-step {
+    max-width: 300px;
+
+    .shepherd-arrow:before {
+        background-color: $white !important;
+    }
+
+    .shepherd-content {
+
+        .shepherd-header {
+            background-color: $white;
+
+            h3 {
+                font-weight: bold;
+            }
+        }
+
+        .shepherd-text {
+            img {
+                max-width: 100%;
+                height: auto;
+            }
+        }
+
+        .shepherd-stats {
+            text-align: center;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            display: flex;
+            justify-content: center;
+            gap: 2px;
+
+            li {
+                transition: width .1s ease-in;
+                box-sizing: content-box;
+                display: block;
+                width: 6px;
+                height: 6px;
+                background: #ccc;
+                border-radius: 10px;
+                text-decoration: none;
+                cursor: pointer;
+
+                &.active, &:hover, &:focus, &:active {
+                    width: 15px;
+                    background: #999;
+                }
+            }
+        }
+
+        .shepherd-footer {
+            border-top: 1px solid #e0e0e0;
+            padding: 10px;
+            display: flex;
+            justify-content: space-between;
+
+            button {
+                margin: 0;
+                color: $black;
+                padding: 0.5rem 1rem;
+                border: 1px solid #bdbdbd;
+                text-decoration: none;
+                text-shadow: 1px 1px 0 #fff;
+                font-size: 14px;
+                background-color: #f4f4f4;
+                border-radius: 0.2em;
+
+                &:hover,
+                &:focus,
+                &:active {
+                    outline: 0;
+                    text-decoration: none;
+                    border-color: #9e9e9e;
+                    background-color: #e0e0e0;
+                    color: #212121;
+                }
+
+                &.disabled {
+                    color: #9e9e9e;
+                    border-color: #bdbdbd;
+                    box-shadow: none;
+                    cursor: default;
+                    background-color: #f4f4f4;
+                    background-image: none;
+                    text-decoration: none;
+                    pointer-events: none;
+                }
+            }
         }
     }
 }
