--- a/ckanext/tour/assets/css/style.css
+++ b/ckanext/tour/assets/css/style.css
@@ -62,4 +62,82 @@
   height: 38px;
 }
 
+.shepherd-modal-overlay-container.shepherd-modal-is-visible {
+  opacity: 0.7 !important;
+}
+
+.shepherd-element.tour-step {
+  max-width: 300px;
+}
+.shepherd-element.tour-step .shepherd-arrow:before {
+  background-color: white !important;
+}
+.shepherd-element.tour-step .shepherd-content .shepherd-header {
+  background-color: white;
+}
+.shepherd-element.tour-step .shepherd-content .shepherd-header h3 {
+  font-weight: bold;
+}
+.shepherd-element.tour-step .shepherd-content .shepherd-text img {
+  max-width: 100%;
+  height: auto;
+}
+.shepherd-element.tour-step .shepherd-content .shepherd-stats {
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  gap: 2px;
+}
+.shepherd-element.tour-step .shepherd-content .shepherd-stats li {
+  transition: width 0.1s ease-in;
+  box-sizing: content-box;
+  display: block;
+  width: 6px;
+  height: 6px;
+  background: #ccc;
+  border-radius: 10px;
+  text-decoration: none;
+  cursor: pointer;
+}
+.shepherd-element.tour-step .shepherd-content .shepherd-stats li.active, .shepherd-element.tour-step .shepherd-content .shepherd-stats li:hover, .shepherd-element.tour-step .shepherd-content .shepherd-stats li:focus, .shepherd-element.tour-step .shepherd-content .shepherd-stats li:active {
+  width: 15px;
+  background: #999;
+}
+.shepherd-element.tour-step .shepherd-content .shepherd-footer {
+  border-top: 1px solid #e0e0e0;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+.shepherd-element.tour-step .shepherd-content .shepherd-footer button {
+  margin: 0;
+  color: black;
+  padding: 0.5rem 1rem;
+  border: 1px solid #bdbdbd;
+  text-decoration: none;
+  text-shadow: 1px 1px 0 #fff;
+  font-size: 14px;
+  background-color: #f4f4f4;
+  border-radius: 0.2em;
+}
+.shepherd-element.tour-step .shepherd-content .shepherd-footer button:hover, .shepherd-element.tour-step .shepherd-content .shepherd-footer button:focus, .shepherd-element.tour-step .shepherd-content .shepherd-footer button:active {
+  outline: 0;
+  text-decoration: none;
+  border-color: #9e9e9e;
+  background-color: #e0e0e0;
+  color: #212121;
+}
+.shepherd-element.tour-step .shepherd-content .shepherd-footer button.disabled {
+  color: #9e9e9e;
+  border-color: #bdbdbd;
+  box-shadow: none;
+  cursor: default;
+  background-color: #f4f4f4;
+  background-image: none;
+  text-decoration: none;
+  pointer-events: none;
+}
+
 /*# sourceMappingURL=style.css.map */
